--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-homework-template",
+  "name": "wallet_frontend",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://VSRudnyk.github.io/wallet_frontend/",
