--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "private": true,
   "homepage": "https://VSRudnyk.github.io/wallet_frontend/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^3.8.2",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-datetime": "^3.1.1",
     "react-dom": "^18.1.0",
+    "react-media": "^1.10.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "react-toastify": "^9.0.7",
+    "redux-persist": "^6.0.0",
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
