--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.1.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.1.0",
+    "react-ellipsis-text": "^1.2.1",
     "react-media": "^1.10.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
