--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.8.2",
     "formik": "^2.2.9",
+    "i18next": "^21.8.16",
+    "i18next-browser-languagedetector": "^6.1.4",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.1.0",
     "react-ellipsis-text": "^1.2.1",
+    "react-i18next": "^11.18.3",
     "react-media": "^1.10.0",
-    "react-redux": "^8.0.2",
+    "react-password-strength-bar": "^0.4.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.0.7",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.3",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
