--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-toastify": "^9.0.7",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11",
     "zxcvbn": "^4.4.2"
