--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "chart.js": "^3.8.2",
+    "datetime": "^0.0.3",
     "formik": "^2.2.9",
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "normalize.css": "^8.0.1",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.1.0",
     "react-ellipsis-text": "^1.2.1",
