--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-datetime": "^3.1.1",
     "react-dom": "^18.1.0",
     "react-ellipsis-text": "^1.2.1",
     "react-i18next": "^11.18.3",
