--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.1.0",
     "react-ellipsis-text": "^1.2.1",
     "react-i18next": "^11.18.3",
+    "react-icons": "^4.4.0",
     "react-media": "^1.10.0",
     "react-password-strength-bar": "^0.4.1",
     "react-redux": "^8.0.2",
