--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "normalize.css": "^8.0.1",
+    "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.1.0",
     "react-ellipsis-text": "^1.2.1",
