--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "normalize.css": "^8.0.1",
+    "notiflix": "^3.2.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-ellipsis-text": "^1.2.1",
     "react-i18next": "^11.18.3",
