--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "async-mutex": "^0.3.2",
     "axios": "^0.27.2",
     "chart.js": "^3.8.2",
     "formik": "^2.2.9",
