--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.4",
+    "react-switch": "^7.0.0",
     "react-table": "^7.8.0",
     "react-toastify": "^9.0.7",
     "redux-persist": "^6.0.0",
