--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.9",
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
+    "immer": "^9.0.15",
     "normalize.css": "^8.0.1",
     "notiflix": "^3.2.5",
     "react": "^18.2.0",
