--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "wallet_frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://VSRudnyk.github.io/wallet_frontend/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.3",
@@ -45,7 +44,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
+    "lint:js": "eslint src/**/*.{js,jsx}",
+    "predeploy": "npm run build",
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
