--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "wallet_frontend",
+  "name": "test-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://VSRudnyk.github.io/wallet_frontend/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.3",
